[tool.poetry]
name = "clicker"
version = "0.1.0"
description = ""
authors = ["pl4xy <pl4xy@email.com>"]

[tool.poetry.dependencies]
python = "3.11.0"
riposte = "^0.4.1"
bs4 = "^0.0.1"
requests = "^2.28.1"
selenium = "^4.4.0"
chromedriver-autoinstaller = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clicker = "clicker.main:run"